# MarineSense

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_marinesense.sh  update.sh
RadialTree/: styles.css
app/: MarineSenseUI.py
images/: README.md  index.html  package-lock.json  script.js
src/marinesense/explanations/: shap_explainer.py
src/marinesense/models/base/: ffa_base.py
src/marinesense/models/hierarchical/: hierarchical_ffa.py
src/marinesense/orchestrators/: ffa_orchestrator.py
src/marinesense/term_structure/: term_structure.py
src/marinesense/uncertainty/: quantifier.py
tests/models/: test_hierarchical_ffa.py
