[tool.poetry]
name = "marinesense"
version = "0.1.0"
description = ""
authors = ["Michael Pearmain"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^2.0.0"
numpy = "^1.25.0"
requests = "^2.28.0"
plotly = "^5.0.0"
streamlit = "^1.25.0"
scikit-learn = "^1.3.0"
pydantic = "^2.0.0"
pydantic-ai ="0.0.18"
devtools = "^0.12.2"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

