[tool.poetry]
name = "marinesense"
version = "0.1.0"
description = "Hierarchical Bayesian Forecasting for Maritime Markets"
authors = ["Michael Pearmain <michael.pearmain@gmail.com>"]
readme = "README.md"
packages = [{include = "marinesense", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = ">=2.2.3"
scipy = ">=1.15.1"
scikit-learn = ">=1.5.2"
shap = ">=0.46.0"
streamlit = ">=1.40.2"
plotly = ">=5.16.1"
statsmodels = ">=0.14.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
